5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1721_3068.log
== TEST (2019-05-02 19:03:21) 
-- CODE:
nomedaarma= int(input())
destreza= int(input())
valores= int(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomedaarma= int(input())
ValueError: invalid literal for int() with base 10: 'SABRE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:10:15) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome
-- ERROR:
File "XXXX", line 4
    if nome
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:13:08) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome==2*s+2*d
	print("CIMITARRA")
-- ERROR:
File "XXXX", line 4
    if nome==2*s+2*d
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:13:20) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome==2*S+2*D
	print("CIMITARRA")
-- ERROR:
File "XXXX", line 4
    if nome==2*S+2*D
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:13:42) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome==2*S+2*D
	print(CIMITARRA)
-- ERROR:
File "XXXX", line 4
    if nome==2*S+2*D
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:13:50) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome == 2*S+2*D
	print(CIMITARRA)
-- ERROR:
File "XXXX", line 4
    if nome == 2*S+2*D
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:14:27) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome==2*s+2*d
	print=CIMITARRA
	
-- ERROR:
File "XXXX", line 4
    if nome==2*s+2*d
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:15:08) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome==2*s+2*d
	print(nome)
	
-- ERROR:
File "XXXX", line 4
    if nome==2*s+2*d
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:15:21) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome==2*s+2*d:
	print(nome)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if nome==2*s+2*d:
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:25) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:26) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:26) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:26) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:26) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:26) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:27) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:27) 
-- CODE:
nome= float(int())
destreza= float(int())
valores= float(int())
if nome=="CIMITARRA":
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
